--- a/EntityFrameworkLab/bin/EntityFrameworkLab.dll.config
+++ b/EntityFrameworkLab/bin/EntityFrameworkLab.dll.config
@@ -57,7 +57,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DbModels" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EFDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DbModels" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EFDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
+    <add name="DbModels1" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Contoso;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
